# AUCARE

./: .editorconfig  .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  lstm_model.pt  svm_model.pkl
.claude/: settings.local.json
.github/workflows/: cd.yml  ci.yml
backend/: .env.example  Dockerfile  Dockerfile.dev  README.md  alembic.ini  cloudbuild.yaml  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/endpoints/: __init__.py  analysis.py  auth.py  health.py
backend/app/core/: __init__.py  config.py  logging.py  security.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  user.py
backend/app/schemas/: __init__.py  base.py  user.py
backend/app/services/: __init__.py  audio_analysis.py  recommendation.py
backend/tests/: __init__.py  conftest.py  test_health.py
docs/: gcp-setup.md  local-development.md  mobile-build.md  terraform-deployment.md
frontend/: .env.example  Dockerfile  Dockerfile.dev  capacitor.config.ts  cloudbuild.yaml  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/components/analysis/: AnalysisResult.tsx  AudioRecorder.tsx  AudioUploader.tsx  index.ts
frontend/src/components/common/: Button.tsx  ErrorBoundary.tsx  Input.tsx  LoadingSpinner.tsx  index.ts
frontend/src/components/layout/: Footer.tsx  Header.tsx  Layout.tsx
frontend/src/config/: index.ts
frontend/src/hooks/: useMediaQuery.ts
frontend/src/pages/: AnalysisPage.tsx  HomePage.tsx  NotFoundPage.tsx
frontend/src/routes/: index.tsx
frontend/src/stores/: authStore.ts
frontend/src/styles/: index.css
frontend/src/types/: index.ts
infrastructure/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
scripts/: check-gcp-costs.sh  init-db.sql  setup-gcp.sh  setup-local.sh
(+16 files in other folders)
